improving the attributes table and the legends

--- a/webmonitor/public/stylesheets/style.css
+++ b/webmonitor/public/stylesheets/style.css
@@ -457,11 +457,13 @@
   right: 0px;
 }
 
-#moveMap { top: 293px; }
+#moveMap { top: 90px; }
 
-#tableButton { top: 336px; }
+#legendsButton { top: 130px; }
 
-#getAttributes { top: 378px; }
+#tableButton { top: 170px; }
+
+#getAttributes { top: 210px; }
 
 #getAttributes.with-select { width: 190px; }
 
@@ -489,20 +491,17 @@
 
 .cursor-pointer { cursor: pointer !important; }
 
-.ol-zoom, .ol-zoom:hover, .ol-control, .ol-control:hover {
-  margin-top: 200px;
-  background-color: rgba(0, 0, 0, 0.4) !important;
-}
+.ol-zoom, .ol-zoom:hover, .ol-control, .ol-control:hover { background-color: rgba(0, 0, 0, 0.4) !important; }
 
 #table-div {
   position: absolute;
   background-color: rgba(255,255,255,0.6);
   width: 100%;
   bottom: 0;
-  z-index: 9999;
+  z-index: 99999;
 }
 
-#table-div > div {
+#table-div > div.main-div {
    margin: 20px;
    padding: 10px 10px 40px 10px;
    background-color: white;
@@ -512,40 +511,55 @@
    overflow-x: hidden;
 }
 
-#table-div > div > ul.pagination {
+#table-div > .ui-resizable-n {
+  top: 0px;
+  height: 18px;
+  background-image: url('../images/icon-arrow-up-b-128.png');
+  background-size: 20px;
+  background-repeat: no-repeat;
+  background-position-x: center;
+  background-position-y: 1px;
+}
+
+#table-div > div.main-div > ul.pagination {
    bottom: 30px;
    position: absolute;
    right: 30px;
 }
 
-#table-div > div > select {
+#table-div > div.main-div > select {
   width: 200px;
 }
 
-#table-div > div > span {
+#table-div > div.main-div > span {
   font-size: 18px;
   float: left;
   margin: 4px 15px 0 0;
 }
 
-#attributes-table-select > span { float: left; }
+#attributes-table-select > span {
+  float: left;
+  font-size: 16px;
+  font-weight: bold;
+  margin: 5px 10px 0 10px;
+}
 
 #attributes-table-select > select {
-  width: 200px;
+  width: 300px;
   float: left;
 }
 
 #legend-box {
   position: absolute;
-  width: 150px;
-  height: 200px;
+  width: 320px;
+  height: 480px;
   background-color: white;
-  z-index: 9999;
+  z-index: 99999;
   overflow: auto;
   border-radius: 5px;
   border: 1px solid;
-  right: 15px;
-  top: 60px;
+  right: 65px;
+  top: 21px;
 }
 
 #legend-box > .legend-header {
