--- a/webmonitor/views/index.html
+++ b/webmonitor/views/index.html
@@ -4,7 +4,7 @@
 
 {% block styles %}
 
-<link rel="stylesheet" type="text/css" href="{[ BASE_URL ]}jquery-ui/themes/base/jquery-ui.css">
+<link rel="stylesheet" type="text/css" href="{[ BASE_URL ]}jquery-ui/themes/base/jquery-ui.min.css">
 <link rel="stylesheet" type="text/css" href="{[ BASE_URL ]}datatables/media/css/dataTables.bootstrap.css">
 
 
@@ -28,21 +28,28 @@
 {% set message = message || {} %}
 
 <div id="terrama2-map" class="terrama2-map cursor-move">
+    <div id="legend-box">
+        <div class="legend-header">Legends</div>
+        <div class="legend-body"></div>
+    </div>
     <div id="map-tools">
         <div id="moveMap" class="map-tool-button mouse-function-btn active"><button type="button"><i class="fa fa-hand-rock-o"></i></button></div>
+        <div id="legendsButton" class="map-tool-button mouse-function-btn"><button type="button"><i class="fa fa-list"></i></button></div>
         <div id="tableButton" class="map-tool-button mouse-function-btn hidden"><button type="button"><i class="fa fa-table"></i></button></div>
         <div id="getAttributes" class="map-tool-button mouse-function-btn hidden">
             <select class="form-control hidden"></select>
             <button type="button"><i class="fa fa-info"></i></button>
         </div>
     </div>
-    <div id="table-div" style="height: 0px;">
-        <div class="hidden">
+    <div id="table-div" style="display: none; height: 400px;">
+        <div class="main-div hidden">
             <div id="attributes-table-select">
                 <span>Layers:</span>
                 <select class="form-control"></select>
             </div>
-            <div style="clear: both; height: 10px;"></div>
+            <div style="clear: both; height: 5px;"></div>
+            <hr/>
+            <div style="clear: both; height: 5px;"></div>
             <div id="attributes-table-div">
                 <table class="table table-bordered table-hover" id="attributes-table"></table>
             </div>
@@ -64,8 +71,7 @@
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <h4 class="modal-title" id="layersModalLabel">Layers</h4>
       </div>
-      <div id="layersModalBody" class="modal-body">
-      </div>
+      <div id="layersModalBody" class="modal-body"></div>
       <div class="modal-footer">
         <button id="closeLayers" type="button" class="btn btn-default" data-dismiss="modal">Close</button>
         <button id="saveLayers" type="button" class="btn btn-primary">Save changes</button>
@@ -75,11 +81,6 @@
 </div>
 
 <div id="feature-info-box"></div>
-
-<div id="legend-box">
-    <div class="legend-header">Legends</div>
-    <div class="legend-body"></div>
-</div>
 
 <script src="{[ BASE_URL ]}moment/moment.js"></script>
 
@@ -110,6 +111,15 @@
     var sliderCapabilities = [];
     var message = "{[message.content]}";
     var userLogged = {[ currentUser !== null ? "true" : "false" ]};
+
+    $("#legend-box").draggable({
+        containment: $('#terrama2-map')
+    });
+
+    $("#table-div").resizable({
+        minHeight: 400,
+        handles: "n"
+    });
 
     if(message != "") {
         $("#terrama2Alert > p > strong").text('');
@@ -605,6 +615,8 @@
     var createAttributesTable = function() {
         var showButton = false;
 
+        $('#attributes-table-select > select').empty();
+
         for(var i = 0, visibleLayersLength = visibleLayers.length; i < visibleLayersLength; i++) {
             var layerId = $('#' + visibleLayers[i]).data('layerid');
             var layerName = TerraMA2WebComponents.MapDisplay.getLayerProperty(layerId, "layerName");
@@ -619,10 +631,10 @@
         if(!showButton) {
             $("#attributes-table-div").empty();
 
-            if(!$('#table-div > div').hasClass('hidden'))
-                $('#table-div > div').addClass('hidden');
+            if(!$('#table-div > div.main-div').hasClass('hidden'))
+                $('#table-div > div.main-div').addClass('hidden');
 
-            $("#table-div").css('height', '0px');
+            $("#table-div").css('display', 'none');
 
             if(!$('#tableButton').hasClass('hidden'))
                 $('#tableButton').addClass('hidden');
@@ -642,8 +654,8 @@
                 if($("#tableButton").hasClass('hidden'))
                     $("#tableButton").removeClass('hidden');
 
-                if($('#table-div > div').hasClass('hidden'))
-                    $('#table-div > div').removeClass('hidden');
+                if($('#table-div > div.main-div').hasClass('hidden'))
+                    $('#table-div > div.main-div').removeClass('hidden');
 
                 $.get(BASE_URL + 'get-columns',
                     {
@@ -699,10 +711,10 @@
             } else {
                 $("#attributes-table-div").empty();
 
-                if(!$('#table-div > div').hasClass('hidden'))
-                    $('#table-div > div').addClass('hidden');
+                if(!$('#table-div > div.main-div').hasClass('hidden'))
+                    $('#table-div > div.main-div').addClass('hidden');
 
-                $("#table-div").css('height', '0px');
+                $("#table-div").css('display', 'none');
 
                 if(!$("#tableButton").hasClass('hidden'))
                     $("#tableButton").addClass('hidden');
@@ -710,10 +722,10 @@
         } else {
             $("#attributes-table-div").empty();
 
-            if(!$('#table-div > div').hasClass('hidden'))
-                $('#table-div > div').addClass('hidden');
+            if(!$('#table-div > div.main-div').hasClass('hidden'))
+                $('#table-div > div.main-div').addClass('hidden');
 
-            $("#table-div").css('height', '0px');
+            $("#table-div").css('display', 'none');
 
             if(!$("#tableButton").hasClass('hidden'))
                 $("#tableButton").addClass('hidden');
@@ -732,18 +744,13 @@
                 var layerData = getLayerData(layerId);
 
                 if(layerData !== null && layerData.id !== undefined && layerData.url !== undefined) {
-                    html += "<strong>" + layerName + "</strong><br/><br/><img src='" + BASE_URL + "get-legend?layer=" + layerId + "&geoserverUri=" + layerData.url + "'/><br/>"
+                    html += "<strong>" + layerName + "</strong><br/><img src='" + BASE_URL + "get-legend?layer=" + layerId + "&geoserverUri=" + layerData.url + "'/>";
+                    if(visibleLayersLength > 1 && i < (visibleLayersLength - 1)) html += "<hr/>";
                 }
             }
         }
 
         $('#legend-box > .legend-body').html((html !== "" ? html : "<strong>No data to show.</strong>"));
-
-        $("#legend-box").draggable({
-            containment: "window"
-        }).resizable({
-            handles: "n, e, s, w"
-        });
     };
 
     var getLayerData = function(layerId) {
@@ -759,15 +766,15 @@
     $('#attributes-table-select > select').on('change', setAttributesTable);
 
     $('#tableButton > button').on('click', function() {
-        if($('#table-div').css('height') === '0px') {
-            $('#table-div').css('height', '400px');
-            $('#table-div > div').removeClass('hidden');
+        if($('#table-div').css('display') === 'none') {
+            $('#table-div').css('display', '');
+            $('#table-div > div.main-div').removeClass('hidden');
             setAttributesTable();
         } else {
-            if(!$('#table-div > div').hasClass('hidden'))
-                $('#table-div > div').addClass('hidden');
+            if(!$('#table-div > div.main-div').hasClass('hidden'))
+                $('#table-div > div.main-div').addClass('hidden');
 
-            $('#table-div').css('height', '0px');
+            $('#table-div').css('display', 'none');
         }
     });
 
@@ -781,6 +788,14 @@
     $('#getAttributes > button').on('click', function() {
         resetMapMouseTools();
         activateGetFeatureInfoTool();
+    });
+
+    $('#legendsButton > button').on('click', function() {
+        if($('#legend-box').hasClass('hidden')) {
+            $('#legend-box').removeClass('hidden');
+        } else {
+            $('#legend-box').addClass('hidden');
+        }
     });
 
     socket.on('proxyResponse', function(data){
@@ -817,12 +832,14 @@
                     closeText: "",
                     position: { my: 'top', at: 'top+75' },
                     open: function () {
-                        var closeBtn = $('.ui-dialog-titlebar-close');
-                        closeBtn.append('<span class="ui-button-icon-primary ui-icon ui-icon-closethick" style="margin-top: -.55em !important; margin-left: -.07em !important;"></span>');
+                        $('.ui-dialog-titlebar-close').css('background-image', 'url(../images/close.png)');
+                        $('.ui-dialog-titlebar-close').css('background-position', 'center');
+                        $('.ui-dialog-titlebar-close').css('background-size', '20px');
                     },
                     close: function () {
-                        var closeBtn = $('.ui-dialog-titlebar-close');
-                        closeBtn.html('');
+                        $('.ui-dialog-titlebar-close').css('background-image', '');
+                        $('.ui-dialog-titlebar-close').css('background-position', '');
+                        $('.ui-dialog-titlebar-close').css('background-size', '');
                     }
                 });
             }
