--- a/webmonitor/views/index.html
+++ b/webmonitor/views/index.html
@@ -221,7 +221,7 @@
       var message = "{[message.content]}";
       var userLogged = {[ currentUser !== null ? "true" : "false" ]};
     </script>
-    <!--<script type="text/javascript" src="{[ BASE_URL ]}dist/TerraMA2WebMonitor.min.js"></script>-->
-    <script type="text/javascript" data-main="{[ BASE_URL ]}javascripts/Startup.js" src="{[ BASE_URL ]}require.js"></script>
+    <script type="text/javascript" src="{[ BASE_URL ]}dist/TerraMA2WebMonitor.min.js"></script>
+    <!--<script type="text/javascript" data-main="{[ BASE_URL ]}javascripts/Startup.js" src="{[ BASE_URL ]}require.js"></script>-->
   </body>
 </html>
