Creating modules to attribute tools, legends, map tools and sockets

--- a/webmonitor/views/index.html
+++ b/webmonitor/views/index.html
@@ -143,7 +143,7 @@
           <div id="terrama2-map" class="terrama2-map cursor-move">
               <div id="legend-box">
                   <div class="legend-header">Legends</div>
-                  <div class="legend-body"></div>
+                  <div class="legend-body"><strong>No data to show.</strong></div>
               </div>
               <div id="map-tools">
                   <div id="moveMap" class="map-tool-button mouse-function-btn active"><button type="button"><i class="fa fa-hand-rock-o"></i></button></div>
