--- a/webmonitor/views/index.html
+++ b/webmonitor/views/index.html
@@ -105,6 +105,10 @@
 
           <!-- Sidebar Menu -->
           <ul class="sidebar-menu">
+            <div class="form-group" style="margin: 10px;">
+              <label>Projects:</label>
+              <select class="form-control" id="projects" name="projects"></select>
+            </div>
             <li class="header">VIEWS</li>
             <!-- Optionally, you can add icons to the links -->
             <div id="terrama2-layerexplorer"></div>
