--- a/webmonitor/views/index.html
+++ b/webmonitor/views/index.html
@@ -149,6 +149,12 @@
                 <div class="legend-header">Legends</div>
                 <div class="legend-body"><strong>No data to show.</strong></div>
               </div>
+              <div id="layer-toolbox">
+                <div class="layer-toolbox-header">Layer Tools</div>
+                <div class="layer-toolbox-body">
+                  <div id="slider-box"></div>
+                </div>
+              </div>
               <div id="map-tools">
                   <div id="moveMap" class="map-tool-button mouse-function-btn active"><button type="button"><i class="fa fa-hand-rock-o"></i></button></div>
                   <div id="legendsButton" class="map-tool-button mouse-function-btn"><button type="button"><i class="fa fa-list"></i></button></div>
@@ -225,7 +231,7 @@
       var message = "{[message.content]}";
       var userLogged = {[ currentUser !== null ? "true" : "false" ]};
     </script>
-    <script type="text/javascript" src="{[ BASE_URL ]}dist/TerraMA2WebMonitor.min.js"></script>
-    <!--<script type="text/javascript" data-main="{[ BASE_URL ]}javascripts/Startup.js" src="{[ BASE_URL ]}require.js"></script>-->
+    <!--<script type="text/javascript" src="{[ BASE_URL ]}dist/TerraMA2WebMonitor.min.js"></script>-->
+    <script type="text/javascript" data-main="{[ BASE_URL ]}javascripts/Startup.js" src="{[ BASE_URL ]}require.js"></script>
   </body>
 </html>
