--- a/webmonitor/public/stylesheets/TerraMA2WebMonitor.css
+++ b/webmonitor/public/stylesheets/TerraMA2WebMonitor.css
@@ -601,3 +601,23 @@
   border-top: 1px solid #d8d8d8;
   padding-top: 15px;
 }
+
+#exportation-status {
+  position: absolute;
+  width: 100%;
+  height: 160px;
+  background-color: rgba(255, 255, 255, 0.75);
+  margin-left: -10px;
+  margin-top: -15px;
+}
+
+#exportation-status > div {
+  padding: 34px 10px 0 10px;
+  text-align: center;
+  font-weight: 900;
+  font-size: 15px;
+}
+
+#exportation-status > div > div {
+  margin-top: 7px;
+}
