creating the configuration for disabled pdf

--- a/webapp/views/configuration/alert.html
+++ b/webapp/views/configuration/alert.html
@@ -41,7 +41,8 @@
 
 <script>
   var configuration = {
-    alert: {[ alert|json|safe ]}
+    alert: {[ alert|json|safe ]},
+    disablePDF: {[ disablePDF ]}
   };
 
   var globals = {};
@@ -369,7 +370,7 @@
           </div>
         </div>
 
-        <div ng-class="{ 'col-md-3': ctrl.dataSeriesType !== undefined && ctrl.dataSeriesType !== null && ctrl.dataSeriesType !== 'GRID', 'col-md-4': ctrl.dataSeriesType === undefined || ctrl.dataSeriesType === null || ctrl.dataSeriesType === 'GRID' }">
+        <div ng-show="!ctrl.disablePDF" ng-class="{ 'col-md-3': ctrl.dataSeriesType !== undefined && ctrl.dataSeriesType !== null && ctrl.dataSeriesType !== 'GRID', 'col-md-4': ctrl.dataSeriesType === undefined || ctrl.dataSeriesType === null || ctrl.dataSeriesType === 'GRID' }">
           <div class="form-group">
             <div class="checkbox">
               <label style="font-weight: 700;">
@@ -390,7 +391,7 @@
           </div>
         </div>
 
-        <div ng-class="{ 'col-md-3': ctrl.dataSeriesType !== undefined && ctrl.dataSeriesType !== null && ctrl.dataSeriesType !== 'GRID', 'col-md-4': ctrl.dataSeriesType === undefined || ctrl.dataSeriesType === null || ctrl.dataSeriesType === 'GRID' }">
+        <div ng-class="{ 'col-md-3': ctrl.dataSeriesType !== undefined && ctrl.dataSeriesType !== null && ctrl.dataSeriesType !== 'GRID' && !ctrl.disablePDF, 'col-md-4': ctrl.dataSeriesType === undefined || ctrl.dataSeriesType === null || ctrl.dataSeriesType === 'GRID' || ctrl.disablePDF }">
           <div class="form-group">
             <div class="checkbox">
               <label style="font-weight: 700;">
@@ -408,7 +409,7 @@
           </div>
         </div>
 
-        <div class="col-md-2" ng-show="ctrl.dataSeriesType !== undefined && ctrl.dataSeriesType !== null && ctrl.dataSeriesType !== 'GRID'">
+        <div ng-class="{ 'col-md-2': !ctrl.disablePDF, 'col-md-4': ctrl.disablePDF }" ng-show="ctrl.dataSeriesType !== undefined && ctrl.dataSeriesType !== null && ctrl.dataSeriesType !== 'GRID'">
           <div class="form-group">
             <div class="checkbox">
               <label style="font-weight: 700;">
