fixing the layer name in the layer toolbox

--- a/webmonitor/public/stylesheets/TerraMA2WebMonitor.css
+++ b/webmonitor/public/stylesheets/TerraMA2WebMonitor.css
@@ -621,3 +621,9 @@
 #exportation-status > div > div {
   margin-top: 7px;
 }
+
+#layer-toolbox > .layer-toolbox-body .layer-name {
+  text-align: center;
+  font-size: 15px;
+  font-weight: 900;
+}
