--- a/webmonitor/views/index.html
+++ b/webmonitor/views/index.html
@@ -150,8 +150,10 @@
                 <div class="legend-body"><strong>No data to show.</strong></div>
               </div>
               <div id="layer-toolbox" class="hidden">
-                <div class="layer-toolbox-header"><span class="layer-name"></span> - Layer Tools<span class="btn btn-default" style="padding: 0 4px 0 4px; float: right;"><i class="fa fa-close"></i></span></div>
+                <div class="layer-toolbox-header">Layer Tools<span class="btn btn-default" style="padding: 0 4px 0 4px; float: right;"><i class="fa fa-close"></i></span></div>
                 <div class="layer-toolbox-body">
+                  <div class="layer-name"></div>
+                  <hr style="margin: 10px 0 10px 0;"/>
                   <div id="slider-box"></div>
                   <div id="exportation-box">
                     <div id="exportation-status" class="hidden">
